package de.dhbw.karlsruhe.getraenkeabrechnung.rights;

public enum Right {
    CAN_CREATE_NEW_USER,
    CAN_SELF_INVOICE,
    CAN_DELETE_USER,
    CAN_CREATE_DRINK,
    CAN_ADD_RIGHTS,
}
